// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1rem solid #574feb;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`composition hook should return with CheckboxField props 1`] = `
Object {
  "aria-describedby": "",
  "aria-invalid": false,
  "aria-required": undefined,
  "children": <React.Fragment>
    <Box
      className="css-1arwtt9 fp-CheckboxHiddenInput"
      id=""
      type="checkbox"
      use="input"
    />
    <Box
      className="css-1kvxfa4 fp-CheckboxIcon"
    />
  </React.Fragment>,
  "className": "css-z0gohc css-1pwrqjj css-o12mw7 fp-Box fp-Checkbox",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-CheckboxField"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1rem solid #574feb;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

.emotion-15 {
  color: #574feb !important;
}

<div
  class="emotion-10 emotion-0 emotion-15 test fp-Box fp-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`overrides CheckboxField.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1rem solid #574feb;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

.emotion-13 {
  background-color: red;
}

<div
  class="emotion-13 emotion-0 emotion-1 fp-Box fp-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should assign a ref via checkboxRef 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1rem solid #574feb;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

<input
  class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
  id="FieldWrapper"
  type="checkbox"
/>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1rem solid #574feb;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly for danger state 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-CheckboxIcon {
  border-color: #da1717;
}

.emotion-2:not(:checked) + .fp-CheckboxIcon {
  box-shadow: #fbe8e8 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1rem solid #574feb;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="true"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly for success state 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-CheckboxIcon {
  border-color: #0a7d33;
}

.emotion-2:not(:checked) + .fp-CheckboxIcon {
  box-shadow: #e7f2eb 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1rem solid #574feb;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly for warning state 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-CheckboxIcon {
  border-color: #ed9c22;
}

.emotion-2:not(:checked) + .fp-CheckboxIcon {
  box-shadow: #fdf5e9 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1rem solid #574feb;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1rem solid #574feb;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

.emotion-15 {
  background-color: #574feb !important;
}

<div
  class="emotion-10 emotion-0 emotion-15 fp-Box fp-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with a checkboxLabel 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-13.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1rem solid #574feb;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

<div
  class="emotion-14 emotion-0 emotion-1 fp-Box fp-CheckboxField"
>
  <div
    class="emotion-14 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-CheckboxLabel fp-Box fp-Label"
        for="checkbox"
        id="label"
      >
        Hello world
      </span>
    </label>
  </div>
</div>
`;

exports[`props should render correctly with checked 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1rem solid #574feb;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Checkbox"
    >
      <input
        checked=""
        class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with defaultChecked 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1rem solid #574feb;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Checkbox"
    >
      <input
        checked=""
        class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with disabled 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1rem solid #574feb;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
        disabled=""
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with indeterminate 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-color: #574feb;
  height: 0.125em;
  width: 0.625em;
  top: calc(50% - 0.0625em);
  left: calc(50% - 0.3125em);
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with isRequired 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1rem solid #574feb;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-required="true"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with label 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-17.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-13 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-10 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-10:focus {
  outline: none;
}

.emotion-10[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-10:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-10:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-10:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-10:checked + .fp-CheckboxIcon::before {
  border: 0.1rem solid #574feb;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-10[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-CheckboxField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 fp-Box"
    >
      <div
        class="emotion-1 emotion-5 fp-Box"
      >
        <legend
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
        >
          Hello world
        </legend>
      </div>
    </div>
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 emotion-17 fp-Box fp-Label fp-Checkbox"
    >
      <input
        class="emotion-1 emotion-2 emotion-10 fp-CheckboxHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-1 emotion-2 emotion-13 fp-CheckboxIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with name 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1rem solid #574feb;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
        id="FieldWrapper"
        name="CheckboxFieldRocks"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with value 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1rem solid #574feb;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
        value="CheckboxFieldValue"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`theming CheckboxField.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1rem solid #574feb;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #919aa9;
}

.emotion-13 {
  background-color: red;
}

<div
  class="emotion-13 emotion-0 emotion-1 fp-Box fp-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
      />
    </label>
  </div>
</div>
`;
